syntax = "proto3";

package channelin.channelin;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "channelin/channelin/params.proto";

option go_package = "channelin/x/channelin/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/channelin/channelin/params";
  
  }
  
  // Queries a list of SayHello items.
  rpc SayHello (QuerySayHelloRequest) returns (QuerySayHelloResponse) {
    option (google.api.http).get = "/channelin/channelin/say_hello/{name}";
  
  }
  
  // Queries a list of Math items.
  rpc Math (QueryMathRequest) returns (QueryMathResponse) {
    option (google.api.http).get = "/channelin/channelin/math/{name}";
  
  }
  
  // Queries a list of Plus items.
  rpc Plus (QueryPlusRequest) returns (QueryPlusResponse) {
    option (google.api.http).get = "/channelin/channelin/plus/{number}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QuerySayHelloRequest {
  string name = 1;
}

message QuerySayHelloResponse {
  string name = 1;
}

message QueryMathRequest {
  string name = 1;
}

message QueryMathResponse {
  string number = 1;
}

message QueryPlusRequest {
  string number = 1;
}

message QueryPlusResponse {
  string number = 1;
}

